--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,13 @@ dependencies:
   ffmpeg_kit_flutter_new: ^1.4.1
   video_thumbnail: ^0.5.3
   path_provider:
-
+  shared_preferences: ^2.5.3
+  provider: ^6.1.5+1
+  get_it: ^9.0.5
+  alert_info: ^0.0.6
+  mime: ^2.0.0
+  visibility_detector: ^0.4.0+2
+  shimmer: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
