--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   mime: ^2.0.0
   visibility_detector: ^0.4.0+2
   shimmer: ^3.0.0
+  share_plus: ^12.0.1
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
